# QtStudy

./: CMakeLists.txt  Newspaper.h  Reader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
Past/: mainwindow.cpp  mainwindow.h
